Updated styling to prevent horizontal scrollbar, chenged post-img to max-width 100%

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -106,7 +106,7 @@ footer a,
 }
 
 .card-img-bottom {
-  max-width: 40%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -157,5 +157,11 @@ footer a,
   .card-title {
     max-width: 26rem;
     max-width: 17rem;
+  }
+}
+
+@media only screen and (max-width: 337px) {
+  .post-components {
+    flex-flow: wrap-reverse;
   }
 }
